# CGoGN

./: CMakeLists.txt
CGoGN/: CMakeLists.txt
CGoGN/include/Algo/Import/: import2tables.h  import2tablesVolume.hpp
CGoGN/include/Container/: sizeblock.h
